# remote_proto

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE
remote/new_proto/: BUILD.bazel  hello.proto
remote/proto/: BUILD.bazel  job.proto
